Fixing filename wrap on mobile

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -8,5 +8,8 @@
   margin-bottom: 0;
 }
 body {
-  padding-top: 95px!important;
+  padding-top: 98px!important;
+}
+a.play-file {
+  word-wrap: break-word;
 }
